# DS-5-Project

./: CMakeLists.txt  README.md  autocompleteapp.cpp  autocompleteapp.h  main.cpp  trie.cpp  trie.h
data_model/: datamodel.cpp  datamodel.h
headers/: autocompleteapp.h  settingsdialog.h  trie.h  trienode.h
src/: Style.css  autocompleteapp.cpp  hoverablebutton.cpp  inputfield.cpp  main.cpp  settingsdialog.cpp  trie.cpp  trienode.cpp
